Openshift Labs/lab4_follower_auto_enrollment/openshift/follower-dap-with-seedfetcher.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dap-follower1
  labels:
    app: dap-follower1
spec:
  ports:
  - port: 443
    name: https
  - port: 636
    name: ldaps
  selector:
    app: dap-follower1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dap-follower1
  name: dap-follower1
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: dap-follower1
  wildcardPolicy: None
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: dap-follower1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dap-follower1
        name: dap-follower1
        role: follower
    spec:
      serviceAccountName: conjur-cluster
      volumes:
      - name: seedfile
        emptyDir:
          medium: Memory
      - name: conjur-token
        emptyDir:
          medium: Memory

      containers:
      - name: dap-appliance
        command: ["/tmp/seedfile/start-follower.sh"]
        image: image-registry.openshift-image-registry.svc:5000/dap/conjur-appliance:11.4.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
          name: https
        - containerPort: 636
          name: ldaps
        - containerPort: 5432
          name: pg-main
        - containerPort: 5433
          name: pg-audit
        readinessProbe:
          httpGet:
            path: /health
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 15
          timeoutSeconds: 5
        volumeMounts:
          - name: seedfile
            mountPath: /tmp/seedfile
            readOnly: true
# Not required when using internal registry
#      imagePullSecrets:
#        - name: dockerpullsecret
